part-1/project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-dep
  labels:
    app: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: project-storage
          persistentVolumeClaim:
            claimName: project-pvc
      containers:
        - name: project
          image: <DOCKERHUB_USER>/the-project:1.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: project-storage
              mountPath: /usr/src/app/data
